# Persona-Agent

./: README.md
assistant_axis_arxiv2601.10387/: .gitignore  01_algorithm_extraction.yaml  02_concept_analysis.yaml  03_implementation_plan.yaml  BLOG_POST.md  DRIVE_DOCS_ANALYSIS.md  GPU_MCP_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  paper.txt
assistant_axis_arxiv2601.10387/Manifolds/: PERSONA_MANIFOLD_EXPERIMENTS.md
assistant_axis_arxiv2601.10387/src/: README.md  config.py  main.py  pyproject.toml
assistant_axis_arxiv2601.10387/src/analysis/: goal_subspace.py  visualize.py
assistant_axis_arxiv2601.10387/src/evaluation/: capabilities.py  jailbreak_eval.py  llm_judge.py  role_susceptibility.py
assistant_axis_arxiv2601.10387/src/experiments/: run_capping_eval.py  run_drift_analysis.py  run_extraction.py  run_goal_subspace.py  run_steering_eval.py
assistant_axis_arxiv2601.10387/src/extraction/: assistant_axis.py  combination_vectors.py  role_vectors.py
assistant_axis_arxiv2601.10387/src/interventions/: capping.py  steering.py
assistant_axis_arxiv2601.10387/src/models/: hooked_model.py
assistant_axis_arxiv2601.10387/src/persona_drift/: conversation_sim.py  drift_analysis.py
assistant_axis_arxiv2601.10387/src/utils/: generation.py  io.py
