[project]
name = "assistant-axis"
version = "0.1.0"
description = "Reproduction of 'The Assistant Axis: Situating and Stabilizing the Default Persona of Language Models'"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "openai>=1.35.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.20.0",
    "lm-eval>=0.4.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
